--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "browserify": "^13.3.0",
+    "flux": "^3.1.2",
     "generator-react-webpack": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-open": "^2.0.0",
     "jquery": "^3.1.1",
+    "react": "^15.4.1",
+    "react-router": "^3.0.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "yo": "^1.8.5"
