--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "gulp-open": "^2.0.0",
     "jquery": "^3.1.1",
     "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
     "yo": "^1.8.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babelify": "^7.3.0",
+    "eslint": "^3.12.2",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-react": "^6.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
