--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-eslint": "^3.0.1",
     "gulp-open": "^2.0.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
