--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "reactify": "^1.1.1",
+    "toastr": "^2.1.2",
     "vinyl-source-stream": "^1.1.0",
     "yo": "^1.8.5"
   },
